# ORM1

./: README.md
ORM1/: CMakeLists.odt  CMakeLists.txt  file_handeling.c  file_handeling.h  main.c
ORM1C/: CMakeLists.txt  file_handeling.c  file_handeling.h  main.c
